fix: ensure text remains visible during webfont load

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,7 @@
   font-family: 'lexend';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local(''),
   url('/fonts/lexend-v14-latin-300.woff2') format('woff2'),
   url('/fonts/lexend-v14-latin-300.woff') format('woff');
